
  [Chuck Short]
  * Added parameters required for EC2 plugin

  [Nicolas Barcet]
  * Error out if domain is undefined (LP: #280125)
  * Fix --dest so that it is actually used now (LP: #280091)
  * Fix -c handling, values are now used (LP: #279159)
  * Create /var/run/network to fix bug LP: #276365
  * Handle fsimage type vms (Xen) in fstab and (hopefully) libvirt  (LP: #282109)

 -- Nicolas Barcet <nicolas.barcet@ubuntu.com>  Sun, 14 Oct 2008 14:16:15 +0200

vm-builder (0.9-0ubuntu2) intrepid; urgency=low

  [ Nicolas Barcet ]
  * Added hint for more help (LP: #269323)
  * Added firstscripts plugin to fix regression on --firstboot and
    --firstlogin (LP: #268957)
  * Added postinst plugin to fix regression on --exec and add --copy (LP: #268955) 
  * Added man page

  [ Soren Hansen ]
  * Include ubuntu-vm-builder package.
  * Read additional config file given by '-c'. (LP: #276813)
  * Fix regression from ubuntu-vm-builder: Make output from subprocess
    non-buffered.
  * Let --overwrite apply for libvirt as well. (LP: #276322)

 -- Soren Hansen <soren@ubuntu.com>  Fri, 03 Oct 2008 18:52:06 +0200

vm-builder (0.9-0ubuntu1) intrepid; urgency=low

  [Nicolas Barcet <nicolas.barcet@ubuntu.com>]
  * Fixed regression on --ip and friends (LP: #268920)
  * Added missing dependancy on dpkg-dev (LP: #270324)
  * Fixed regression on --part (LP: #268718)
  
 -- Soren Hansen <soren@ubuntu.com>  Wed, 24 Sep 2008 09:58:35 +0200

vm-builder (0.8.1-0ubuntu3) intrepid; urgency=low

  [Soren Hansen <soren@ubuntu.com>]
  * Re-add VMWare support. (LP: #268140) 
  * Fixed sources.list generation for Ubuntu. (LP: #268155)
  * Added configuration file handling. (LP: #268170)
  * Fix up Xen support (device and configuration file creation). (LP: #268142)

 -- Soren Hansen <soren@ubuntu.com>  Tue, 09 Sep 2008 17:01:02 +0200

vm-builder (0.8.1-0ubuntu2) intrepid; urgency=low

  * Apply patch to only conditionally import libvirt. Fixes FTBFS.
